# PathFinder

./: .gitignore  README.md  SETUP.md  api-endpoints.md  auth-flow-diagram.txt  backend-architecture.md  backend-workflow.txt  database-schema.sql  deployment-infrastructure.md  dev-start.py  error-handling-logging.md  external-services-integration.md  message-processing-flow.txt  package-lock.json  pyproject.toml  requirements.txt  sql_server_modifications.md  start.py  table_description.json
assets/: test.xlsx
context + fixes/: ECHARTS_FIX_README.md  ECHARTS_INTEGRATION_GUIDE.md  HEATMAP_FIX.md  IMPLEMENTATION_SUMMARY.md  SQL_PARSER_TUPLE_FIX.md  TODAYS_FIXES_SUMMARY.md
context + fixes/plans/: ECHARTS_STACKED_CHARTS_FIX.md  fix-echarts-stacked-charts-160e0859.plan.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/spreadsheet/: page.tsx
frontend/components/ui/: plotly-chart.tsx
frontend/hooks/: use-jewelry-chat.ts  use-spreadsheet-chat.ts
frontend/styles/: markdown.css
src/: __init__.py  api.py  appContext.py  main.py
src/database/: agent.py  echarts.py  echarts_generator.py
src/database/sys-prompt/: data.gov-sys-promp.txt  old-sys-prompt.txt
src/internal/: embedToPinecone.py
src/spreadsheet/: execPandasQuery.py  genAnswer.py  genPandasPrompt.py  genPandasQuery.py  genPlot.py  loadPandasDF.py  runSpreadsheetQuery.py  state.py
src/utils/: summarizeConversation.py
tests/: health_check.py  test_sql_parser_fix.py  test_stacked_charts.py
(+3 files in other folders)
