[project]
name = "zivo-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "langchain-community>=0.3.26",
    "langchain[google-genai,openai]>=0.3.26",
    "langgraph>=0.0.60",
    "langsmith>=0.4.1",
    "openai>=1.91.0",
    "openevals>=0.1.0",
    "pymysql>=1.1.1",
    "pyodbc>=5.0.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.0",
    "unstructured>=0.18.3",
    "openpyxl>=3.1.5",
    "networkx>=3.5",
    "langchain-openai>=0.3.25",
    "langchain-pinecone>=0.2.8",
    "faiss-cpu>=1.11.0",
    "langchain-azure-dynamic-sessions>=0.2.0",
    "langchainhub>=0.1.21",
    "mysql-mcp-server>=0.2.2",
    "langchain-mcp-adapters>=0.1.9",
    "plotly>=6.2.0",
    "tabulate>=0.9.0",
]
